<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/signInFragment">

    <fragment
        android:id="@+id/signInFragment"
        android:name="com.twilio.livevideo.app.view.SignInFragment"
        android:label="@string/title_sign_in_screen"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_signInFragment_to_signInPasscodeFragment"
            app:destination="@id/signInPasscodeFragment" />
    </fragment>

    <fragment
        android:id="@+id/signInPasscodeFragment"
        android:name="com.twilio.livevideo.app.view.SignInPasscodeFragment"
        android:label="@string/title_sign_in_passcode_screen"
        tools:layout="@layout/fragment_sign_in_passcode">
        <action
            android:id="@+id/action_signInPasscodeFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/main_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.twilio.livevideo.app.view.HomeFragment"
        android:label="@string/title_home_screen"
        tools:layout="@layout/fragment_home" />

</navigation>